--- a/src/app/main-content/contact-me/contact-me.component.scss
+++ b/src/app/main-content/contact-me/contact-me.component.scss
@@ -22,6 +22,7 @@ section {
         .contact-logo {
             @include all.absolute($right: 5rem, $top: 5rem);
             @include all.size($w: rem, $h: 9rem);
+            z-index: 10;
 
             @media(min-width: 2150px) {
                 @include all.absolute($right: 10rem, $top: 15rem);
@@ -126,9 +127,18 @@ section {
             @include all.fl($flexdir: column, $alit: center);
             min-width: 300px;
             position: relative;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(15px);
+            -webkit-backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 15px;
+            padding: 2rem;
+            margin: 0 2rem;
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 
             @include all.tablet {
                 height: 55dvh;
+                padding: 1.8rem 0.2rem 0.2rem 0.2rem;
             }
 
             .formGroup {
