Adjustments and redesign of buttons and component headings

--- a/src/app/main-content/colleagues/colleagues.component.html
+++ b/src/app/main-content/colleagues/colleagues.component.html
@@ -1,8 +1,8 @@
 <section>
 	<div class="content">
 		<div class="arrow-main">
-			<div class="arrow">
-			</div>
+			<!-- <div class="arrow">
+			</div> -->
 			<h3>{{ 'colleagues.intheirwords' | translate }}</h3>
 		</div>
 		<h2>{{ 'colleagues.thoughts' | translate }}</h2>
