--- a/public/styles/mixins.scss
+++ b/public/styles/mixins.scss
@@ -58,28 +58,28 @@
 	background-size: $bg-size;
 }
 
-@mixin nav-link-base {
-    position: relative;
+// @mixin nav-link-base {
+//     position: relative;
 
-    a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0.9rem;
-        height: 3rem;
-        text-decoration: none;
-        color: #f7f9fa;
-        position: relative;
-        z-index: 2;
-        border: 2px solid transparent;
-        border-radius: 4px; 
-        transition: all 0.2s ease;
+//     a {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         padding: 0.9rem;
+//         height: 3rem;
+//         text-decoration: none;
+//         color: #f7f9fa;
+//         position: relative;
+//         z-index: 2;
+//         border: 2px solid transparent;
+//         border-radius: 4px; 
+//         transition: all 0.2s ease;
 
-        &:hover {
-            color: #00f2ff; 
-            animation: electric-zap 0.6s infinite;
-            border-color: #00f2ff;
-        }
-    }
-    @content;
-}
+//         &:hover {
+//             color: #f5c518; 
+//             animation: electric-zap 0.6s infinite;
+//             border-color: #f5c518;
+//         }
+//     }
+//     @content;
+// }
