--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -1,6 +1,9 @@
 @use "../../../../public/styles/all_styles.scss" as all;
 @forward "../../../../public/styles/component-styles.scss";
 
+$imbiss-orange: #107eeb;
+$white: #070101;
+
 section {
     @include all.size($h: 80dvh);
     padding: 5rem;
@@ -34,7 +37,7 @@ section {
 
             @include all.tablet {
                 padding-left: 2.3rem;
-                padding-top: 2rem;
+                padding-top: 0;
             }
 
             @include all.mobile {
@@ -93,6 +96,7 @@ section {
                     @include all.size($w: 100%, $h: 16dvh);
 
                     @include all.mobile {
+                        margin-top: -1rem;
                         height: 13dvh;
                     }
                 }
@@ -102,7 +106,9 @@ section {
                     margin-top: 1.2rem;
                     z-index: 20;
 
-                    @include all.tablet {
+
+                    @include all.mobile {
+                        margin-top: -1rem;
                         gap: 0;
                     }
                 }
@@ -127,16 +133,18 @@ section {
                     @include all.size($w: 100%, $h: 16dvh);
 
                     @include all.mobile {
+                        margin-top: -2rem;
                         height: 13dvh;
                     }
                 }
 
                 .remote-container {
                     @include all.fl($jc: center, $alit: center, $gap: 1rem);
-                    margin-bottom: 0.5rem;
-                    transform: rotate(6deg);
+                    margin-bottom: -0.5rem;
+                    transform: rotate(5deg);
 
-                    @include all.tablet {
+                    @include all.mobile {
+                        margin-top: -6rem;
                         gap: 0;
                     }
                 }
@@ -174,8 +182,17 @@ section {
         }
 
         .owner-info {
-            @include all.size($w: 100%, $h: 18dvh);
-            flex-direction: column;
+            @include all.size($w: 60%, $h: 18dvh);
+            flex-direction: column; 
+
+            @media(max-width: 1545px) {
+                width: 100%;
+            }
+
+            @include all.tablet {
+                width: 100%;
+                height: 10dvh;
+            }
 
             .owner-paragraph {
                 width: 100%;
@@ -188,8 +205,12 @@ section {
                 font-size: 4rem;
                 z-index: 0;
 
+                @include all.notebook {
+                    font-size: 3rem;
+                }
+
                 @include all.tablet {
-                    font-size: 2.8rem;
+                    font-size: 2rem;
                 }
             }
         }
@@ -209,36 +230,50 @@ section {
                 z-index: 20;
 
                 @include all.tablet {
-                    top: 6rem;
+                    top: 8rem;
                 }
             }
         }
     }
 
     .head {
-        position: relative;
-        overflow: hidden;
-        padding-top: 0.8rem;
-        width: fit-content;
-        height: 12vh;
+        text-decoration: none;
+        color: rgba($white, 0.9);
+        font-size: 1rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
+        padding: 5px 0; // Kleiner Puffer für den Strich
+        position: relative; // Wichtig für die Positionierung des Strichs
+        transition: color 0.3s ease;
 
-        &:after {
-            content: "";
-            @include all.absolute($top: 50%, $left: 0);
-            @include all.size($w: 50%, $h: 3.5rem);
-            @include all.bg-setup();
-            background-image: url("../../../../public/assets/00_Hand-drawn lines/01_About me/Color option 3.png");
-            z-index: 1;
-            clip-path: inset(0 100% 0 0);
-            transition: clip-path 0.5s ease-out;
+        // DER UNTERSTRICH (Cyber-Linie)
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0.85rem;
+            right: 0;
+            width: 0; // Startet bei 0 Breite
+            height: 2px; // Etwas dicker für den Neon-Look
+            background: $imbiss-orange;
+            box-shadow: 0 0 8px $imbiss-orange; // Der Glow-Effekt
+            transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 
-            @include all.tablet {
-                @include all.size($w: 80%, $h: 3.5rem);
+            @include all.notebook {
+                bottom: 0rem;
+            }
+
+            @include all.mobile {
+                bottom: 0.2rem;
             }
         }
 
-        &:hover:after {
-            clip-path: inset(0 0 0 0);
+        &:hover {
+            color: $imbiss-orange; // Text wird heller beim Hover
+
+            &::after {
+                width: 100%; // Strich fährt voll aus
+            }
         }
     }
 }
