--- a/src/app/main-content/hero-section/hero-section.component.scss
+++ b/src/app/main-content/hero-section/hero-section.component.scss
@@ -13,12 +13,12 @@ section {
     }
 
     @include all.tablet {
-        height: 90dvh;
+        height: 100dvh;
     }
 
     .content {
         height: 110dvh;
-        @include all.marpad($pad: 0 15rem);
+        @include all.marpad($pad: 0 10rem);
 
         @media(min-width: 2150px) {
             height: 60dvh;
@@ -33,15 +33,15 @@ section {
         }
 
         //#region first-image
-        .first-image {
+        .logo-container-wrapper {
+            // Positionierung wie in deinem Original
             @include all.absolute($top: 10%, $right: 18%);
-            @include all.size($w: 18rem, $h: 21rem);
+            // RADIKALE GRÖSSENKONTROLLE (Passe diese Werte an, bis es passt)
+            width: 280px !important;
+            height: 320px !important;
             z-index: 20;
-            // transform: rotate(7.5deg);
-
-            &:hover {
-                filter: grayscale(2);
-            }
+            perspective: 1000px;
+            display: block;
 
             @media(min-width: 2150px) {
                 @include all.absolute($top: 20%, $right: 14%);
@@ -57,35 +57,55 @@ section {
             }
 
             @include all.mobile {
-                @include all.size($w: 13rem, $h: 16rem);
+                @include all.size($w: 10rem, $h: 16rem);
             }
+        }
+
+        .logo-container {
+            width: 100%;
+            height: 100%;
+            transform-style: preserve-3d;
+        }
+
+        .first-image {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            transform-style: preserve-3d;
+            transform: rotate(1.5deg); // Deine gewünschte Schräglage
 
             img {
-                @include all.size($w: 100%, $h: 100%);
-                object-fit: cover;
-                transform: rotate(7.5deg);
-
-                @media(max-width: 1130px) {
-                    transform: none;
-                }
+                width: 100%;
+                height: 100%;
+                object-fit: contain; // Verhindert, dass das Bild abgeschnitten wird
+                display: block;
             }
 
             p {
-                @include all.absolute($bottom: 1rem, $left: 4.8rem);
-                font-size: 1.6rem;
+                // Absolute Positionierung RELATIV zum Bild (daher innerhalb von .first-image)
+                position: absolute;
+                bottom: 20px;
+                left: 0;
+                width: 100%;
+                text-align: center;
+
+                font-size: 1.4rem;
                 font-weight: 700;
-                transform: rotate(7.5deg);
-
-                @media(max-width: 1130px) {
-                    transform: none;
-                }
-
-                @include all.mobile {
-                    @include all.absolute($bottom: 0.5rem, $left: 0);
-                    @include all.size($w: 100%);
-                    @include all.fl($jc: center);
-                }
+                color: black;
+                margin: 0;
+                pointer-events: none;
+                z-index: 5;
             }
+        }
+
+        .shine {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 4;
         }
 
         //#endregion
@@ -184,7 +204,7 @@ span {
 
     .letter {
         font-family: inherit; // Stellt sicher, dass die Buchstaben die neue Font erben
-        
+
         &:hover {
             text-transform: lowercase;
         }
