--- a/src/app/main-content/skill-set/skill-set.component.scss
+++ b/src/app/main-content/skill-set/skill-set.component.scss
@@ -1,5 +1,8 @@
 @use "./../../../../public/styles/all_styles.scss" as all;
 
+$imbiss-orange: #0ea532;
+$white: white;
+
 section {
     background: url("./../../../../public/assets/01_Background/Img Original Size/Skills BGsmall.png");
     @include all.bg-setup($bg-size: cover);
@@ -17,7 +20,7 @@ section {
 
         @media(min-width: 2150px) {
             padding-top: 15rem;
-    }
+        }
 
         @include all.notebook {
             padding: 2rem;
@@ -25,6 +28,10 @@ section {
 
         @include all.tablet {
             min-height: 170dvh;
+            padding-top: 5rem;
+        }
+
+        @include all.mobile {
             padding-top: 5rem;
         }
 
@@ -58,34 +65,46 @@ section {
                 }
 
                 .skill-set {
-                    position: relative;
-                    overflow: hidden;
-                    font-size: clamp(2.9rem, 5dvw, 4.5rem);
-                    width: fit-content;
-                    z-index: 10;
-                    cursor: pointer;
+                    width: 100%;
+                    text-decoration: none;
+                    color: rgba($white, 0.9);
+                    font-size: clamp(2rem, 3dvw, 6rem);
+                    font-weight: 600;
+                    text-transform: uppercase;
+                    letter-spacing: 1.5px;
+                    padding: 5px 0; // Kleiner Puffer für den Strich
+                    position: relative; // Wichtig für die Positionierung des Strichs
+                    transition: color 0.3s ease;
+                    text-align: end;
 
-                    @include all.tablet {
-                        font-size: 3rem;
-                    }
+                    // DER UNTERSTRICH (Cyber-Linie)
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        // top: 0.85rem;
+                        top: 0.3rem;
+                        right: 0;
+                        width: 0; // Startet bei 0 Breite
+                        height: 2px; // Etwas dicker für den Neon-Look
+                        background: $imbiss-orange;
+                        box-shadow: 0 0 8px $imbiss-orange; // Der Glow-Effekt
+                        transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 
-                    &:after {
-                        content: "";
-                        @include all.absolute($bottom: 0, $left: 0);
-                        @include all.size($w: 100%, $h: 10dvh);
-                        @include all.bg-setup();
-                        background-image: url("../../../../public/assets/00_Hand-drawn lines/02_Skills/Color option 2.png");
-                        z-index: -1;
-                        clip-path: inset(0 0 100% 0);
-                        transition: clip-path 0.5s ease-out;
+                        @include all.notebook {
+                            bottom: 0rem;
+                        }
 
-                        @include all.tablet {
-                            @include all.size($w: 100%, $h: 8dvh);
+                        @include all.mobile {
+                            bottom: 0.2rem;
                         }
                     }
 
-                    &:hover:after {
-                        clip-path: inset(0 0 0 0);
+                    &:hover {
+                        color: $imbiss-orange; // Text wird heller beim Hover
+
+                        &::after {
+                            width: 100%; // Strich fährt voll aus
+                        }
                     }
                 }
             }
@@ -248,8 +267,8 @@ section {
                     z-index: 1;
 
                     @media(min-width: 2150px) {
-                    width: 70%;
-                }
+                        width: 70%;
+                    }
 
                     @include all.mobile {
                         width: 100%;
